# chromium-pwa-wmclass-sync

./: Cargo.toml  LICENSE  README.md  flake.nix
conductor/: product-guidelines.md  product.md  tech-stack.md  workflow.md
src/: logic.rs  main.rs
tests/: functional-test.nu
tests/fixtures/: Collision Target.desktop  Correct App.desktop  collision_source.desktop  mismatched_wmclass.desktop  needs_rename.desktop  non_pwa.desktop
