[package]
name = "chromium-pwa-wmclass-sync"
version = "0.1.0"
edition = "2021"
authors = ["Bohdan Tkachenko <bohdan@tkachenko.dev>"]
description = "Fixes StartupWMClass and renames .desktop files for Chromium PWAs."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rust-ini = "0.21"
log = "0.4"
env_logger = "0.11"
path-clean = "1.0"
home = "0.5"
